SET(LIBUTIL utils.cc)
ADD_LIBRARY(utils SHARED ${LIBUTIL})
TARGET_LINK_LIBRARIES(utils jsoncpp)

SET(LIBUSER user.cc)
ADD_LIBRARY(user SHARED ${LIBUSER})

SET(LIBDB database.cc)
ADD_LIBRARY(db SHARED ${LIBDB})
TARGET_LINK_LIBRARIES(db mysqlclient)

SET(LIBWORKER worker.cc)
ADD_LIBRARY(worker SHARED ${LIBWORKER})
TARGET_LINK_LIBRARIES(worker utils user db)

SET(LIBDTR diverter.cc)
ADD_LIBRARY(dtr SHARED ${LIBDTR})
TARGET_LINK_LIBRARIES(dtr worker)

ADD_EXECUTABLE(main main.cc)
TARGET_LINK_LIBRARIES(main dtr)