SET(LIBUTIL utils.cc)
ADD_LIBRARY(utils SHARED ${LIBUTIL})
TARGET_LINK_LIBRARIES(utils jsoncpp)
SET_TARGET_PROPERTIES(utils PROPERTIES OUTPUT_NAME "utils")


SET(LIBUSER user.cc)
ADD_LIBRARY(user SHARED ${LIBUSER})
SET_TARGET_PROPERTIES(user PROPERTIES OUTPUT_NAME "user")


SET(LIBDB database.cc)
ADD_LIBRARY(db SHARED ${LIBDB})
TARGET_LINK_LIBRARIES(db mysqlclient)
SET_TARGET_PROPERTIES(db PROPERTIES OUTPUT_NAME "db")


SET(LIBWORKER worker.cc)
ADD_LIBRARY(worker SHARED ${LIBWORKER})
TARGET_LINK_LIBRARIES(worker utils user db)
SET_TARGET_PROPERTIES(worker PROPERTIES OUTPUT_NAME "worker")


SET(LIBDTR diverter.cc)
ADD_LIBRARY(dtr SHARED ${LIBDTR})
TARGET_LINK_LIBRARIES(dtr worker)
SET_TARGET_PROPERTIES(dtr PROPERTIES OUTPUT_NAME "dtr")



ADD_EXECUTABLE(main main.cc)
TARGET_LINK_LIBRARIES(main dtr)